--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+/* .header {
+  display: grid;
+  grid-template-columns: 75% 25;
+  grid-template-rows: min-content auto auto;
+  grid-template-areas:
+    'header__header'
+    'header__username'
+    'header__avatar';
+} */
+/* / */
+
+/* .header {
+  background-color: blueviolet;
+  /* grid-template-rows: auto;
+  grid-template-columns: 100px 500px;
+  grid-template-areas: 'header__header', 'header__user'; */
+
+.header {
+  background-color: #e86252;
+  /* display: grid;
+  grid-template-columns: 80% 20%;
+  grid-template-rows: 100%;
+  grid-template-areas: 'header__header', 'header__user'; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.articles {
+  background-color: white;
+  /* grid-column: 1/3; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.articleCards {
+  background-color: #fbfbf2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header__avatar {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.header__user {
+  grid-column: 3;
+}
+
+.header__header {
+  grid-column: 1;
+}
+.user {
+  background-color: #e86252;
+  /* grid-column: 2;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center; */
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.articles__navbar {
+  background-color: #bebec5;
 }
