--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,10 @@
   background-color: #fbfbf2;
 }
 
+.singleArticle {
+  background-color: #fbfbf2;
+}
+
 .header__avatar {
   width: 50px;
   height: 50px;
