--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,125 @@
+/* Header */
+
 .header {
   background-color: #e86252;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
+.header__header {
+  padding-left: 1.5%;
+  margin-top: 1px;
+  font-size: 5rem;
+  margin-bottom: -1px;
+  padding-bottom: 15px;
+}
+
+.header__icons {
+  display: flex;
+  direction: row;
+}
+
+.header-wrapper {
+  width: auto;
+  padding-right: 3%;
+  padding-top: 1%;
+}
+
+.username-wrapper {
+  font-size: 0.75rem;
+  margin-left: 52px;
+  margin-top: -10px;
+}
+
+.home-wrapper {
+  width: 50%;
+  padding-left: 3%;
+  padding-top: 3%;
+}
+
+.header__avatar {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-left: 12px;
+}
+
+.header__home-img {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+}
+
+@media (max-width: 480px) {
+  .header__header {
+    font-size: 3rem;
+    padding-left: 2%;
+    padding-bottom: 10px;
+  }
+  .header__avatar {
+    width: 38px;
+    height: 38px;
+  }
+  .header__home-img {
+    width: 30px;
+    height: 30px;
+  }
+  .username-wrapper {
+    font-size: 0.65rem;
+    margin-left: 40px;
+  }
+  .articleCards {
+    padding-left: 40px;
+    padding-top: 1px;
+    padding-bottom: 15px;
+    padding-right: 35px;
+  }
+  .articleCard-title {
+    margin-bottom: 8px;
+  }
+  .articleCard-topic {
+    margin-bottom: -10px;
+    margin-top: 10px;
+  }
+  .singleArticle {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .commentCard {
+    margin-left: -7%;
+    margin-right: -7%;
+  }
+  .postComment {
+    margin-left: -14%;
+  }
+  .commentBox {
+    width: 80%;
+    height: 70px;
+    margin-bottom: 5px;
+  }
+  .deleteCommentButton {
+    font-size: 0.75rem;
+  }
+}
+
+/* Comments */
+
+.commentBox {
+  width: 83%;
+  height: 70px;
+  margin-bottom: 5px;
+}
+
+.deleteCommentButton {
+  margin-top: 15px;
+  background-color: #e86252;
+  padding: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: white;
+  font-weight: bold;
+}
+
+/* Articles */
 .articles {
   background-color: white;
 }
@@ -15,24 +130,6 @@
 
 .singleArticle {
   background-color: #fbfbf2;
-}
-
-.header__avatar {
-  width: 50px;
-  height: 50px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.header__user {
-  grid-column: 3;
-}
-
-.header__header {
-  grid-column: 1;
-}
-.user {
-  background-color: #e86252;
 }
 
 .articles__navbar {
