--- a/src/App.css
+++ b/src/App.css
@@ -140,3 +140,12 @@
   display: flex;
   flex-direction: row;
 }
+
+/* Voting Buttons */
+.downvoteButtonStatus-true {
+  background-color: #e86252;
+}
+
+.upvoteButtonStatus-true {
+  background-color: rgb(77, 139, 77);
+}
