--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,11 @@
 }
 
 .header__header {
-  padding-left: 1.5%;
-  margin-top: 1px;
+  margin-top: 30px;
   font-size: 5rem;
   margin-bottom: -1px;
   padding-bottom: 15px;
+  text-align: center;
 }
 
 .header__icons {
@@ -49,11 +49,14 @@
   object-fit: cover;
 }
 
+.nav-links {
+  font-size: 1.25rem;
+}
+
 @media (max-width: 480px) {
   .header__header {
-    font-size: 3rem;
-    padding-left: 2%;
-    padding-bottom: 10px;
+    font-size: 2.5rem;
+    padding-bottom: 20px;
   }
   .header__avatar {
     width: 38px;
@@ -84,6 +87,12 @@
     padding-left: 5%;
     padding-right: 5%;
   }
+
+  .articleCards-img {
+    margin-bottom: 0px;
+    margin-top: 10px;
+    padding-left: 21%;
+  }
   .commentCard {
     margin-left: -7%;
     margin-right: -7%;
@@ -98,6 +107,13 @@
   }
   .deleteCommentButton {
     font-size: 0.75rem;
+  }
+  .articleCard-img {
+    width: 40vw !important;
+    height: auto;
+  }
+  .nav-links {
+    font-size: 1rem;
   }
 }
 
@@ -126,6 +142,7 @@
 
 .articleCards {
   background-color: #fbfbf2;
+  padding-left: 10%;
 }
 
 .singleArticle {
@@ -139,6 +156,20 @@
 .SingleArticle__votes {
   display: flex;
   flex-direction: row;
+}
+
+.articleCard-img {
+  width: 70% !important;
+  padding: 2%;
+  margin-top: 10%;
+}
+
+.articleCards-left {
+  position: absolute;
+}
+
+.articleCards-text {
+  display: flex;
 }
 
 /* Voting Buttons */
